# rdf-datalog

./: .dockerignore  .gitignore  AUTH.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXPRESSION_PLAN.md  FRONTEND_PLAN.md  PERFORMANCE.md  PERSISTENCE_PLAN.md  PLAN.md  PROTOCOLS.md  QUERY_BUILDER_PLAN.md  README.md  SERVER.md  SHACL_PLAN.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.cargo/: audit.toml
benches/: gene_ontology.rs  lubm.rs
dag_rdf/: Cargo.toml
dagalog-kernel/: Cargo.toml
dagalog-kernel/src/: completion.rs  lib.rs  main.rs  protocol.rs  session.rs  sockets.rs
dagalog-kernel/src/cell/: datalog.rs  manchester.rs  mod.rs  ottr.rs  rml.rs  shacl.rs  sparql.rs  turtle.rs
dagalog-kernel/src/output/: mod.rs  table.rs  turtle_fmt.rs
dagalog-kernel/tests/: notebook_e2e.rs  path_security_tests.rs  protocol_security_tests.rs
dagalog-kernel/tests/support/: mod.rs
datalog/: Cargo.toml
datalog_parser/: Cargo.toml
eli/: Cargo.toml
examples/: load_and_query.rs  with_datalog.rs  with_reasoning.rs
ingress/: Cargo.toml
jsonld_parser/: Cargo.toml
manchester_parser/: Cargo.toml
memory/: MEMORY.md  project_cli.md  project_expression_plan.md  project_persistence.md  project_rdf_owl_translator.md  project_shacl.md  project_sparql_aggregates_paths.md
notebooks/: dagalog_intro.ipynb
ottr/: Cargo.toml
owl2rl2datalog/: Cargo.toml
owl_ontology/: Cargo.toml
rdf/: Cargo.toml
rdf_canon/: Cargo.toml
rdf_canon/src/: lib.rs
rdf_owl_translator/: Cargo.toml
rml/: Cargo.toml
rml/examples/: rml_probe.rs
rml/src/: ast.rs  engine.rs  functions.rs  lib.rs  loader.rs  optimizer.rs  plan.rs  sandbox.rs  template.rs  translate.rs
rml/src/sources/: csv.rs  json.rs  mod.rs  xml.rs
rml/tests/: csv_tests.rs  end_to_end.rs  fnml_tests.rs  join_end_to_end.rs  json_end_to_end.rs  json_tests.rs  loader_tests.rs  plan_tests.rs  security_tests.rs  source_row_tests.rs  template_tests.rs  xml_end_to_end.rs  xml_row_tests.rs  xml_source_tests.rs
rml/tests/fixtures/encoding/: mapping.ttl  person.csv
rml/tests/fixtures/fnml_basic/: mapping.ttl  person.csv
rml/tests/fixtures/jsonl_basic/: data.jsonl  mapping.ttl
rml/tests/fixtures/rmltc0001a/: mapping.ttl  student.csv
rml/tests/fixtures/rmltc0001b/: mapping.ttl  student.json
rml/tests/fixtures/rmltc0001c/: mapping.ttl
rml/tests/fixtures/rmltc0002a/: mapping.ttl
rml/tests/fixtures/rmltc0002b/: mapping.ttl  person.json
rml/tests/fixtures/rmltc0002c/: mapping.ttl
rml/tests/fixtures/rmltc0003a/: mapping.ttl  sport.csv
rml/tests/fixtures/rmltc0007a/: mapping.ttl
rml/tests/fixtures/rmltc0007b/: mapping.ttl  score.csv
rml/tests/fixtures/rmltc0007c/: mapping.ttl  student.json
rml/tests/fixtures/rmltc0007d/: mapping.ttl  student.json
rml/tests/fixtures/rmltc0007e/: mapping.ttl  student.xml
rml/tests/fixtures/rmltc0007f/: mapping.ttl  student.xml
rml/tests/fixtures/rmltc0009a/: city.csv  mapping.ttl
rml/tests/fixtures/rmltc0009a_join/: mapping.ttl
rml/tests/fixtures/rmltc0009b/: city.json  mapping.ttl
rml/tests/fixtures/rmltc0009b_join/: mapping.ttl
rml/tests/fixtures/rmltc0009c/: city.xml  mapping.ttl
rml/tests/fixtures/rmltc0010a/: mapping.ttl  student.csv
rml/tests/fixtures/rmltc0010b/: mapping.ttl  student.json
rml/tests/fixtures/rmltc0010c/: mapping.ttl  student.xml
rml/tests/fixtures/rmltc0014a/: data.json  mapping.ttl
rml/tests/fixtures/rmltc0014b/: data.xml  mapping.ttl
rml/tests/fixtures/rmltc0015a/: data.json  mapping.ttl
rml/tests/fixtures/rmltc0015b/: data.xml  mapping.ttl
scripts/: download_test_ontologies.sh
shacl/: Cargo.toml
sparql_endpoint/: Cargo.toml
sparql_endpoint/src/: admin.rs  auth.rs  constraints.rs  dataset_routes.rs  frontend.html  frontend.rs  graph_store.rs  lib.rs  negotiate.rs  ottr_endpoint.rs  persistence.rs  query.rs  query_builder.rs  registry.rs  rml_endpoint.rs  server.rs  service_desc.rs  shacl_endpoint.rs  sparql_update.rs  transaction_routes.rs  transactions.rs  upload.rs  void.rs  vqs_routes.rs
sparql_endpoint/src/serialize/: construct.rs  mod.rs  sparql_csv.rs  sparql_json.rs  sparql_xml.rs  turtle.rs
sparql_endpoint/tests/: allowlist.rs  auth.rs  constraints.rs  content_negotiation.rs  endpoint_get.rs  endpoint_post.rs  etag_occ.rs  frontend_browser.rs  fuseki_compat.rs  graph_store.rs  incremental_http.rs  isolation.rs  jsonld_gsp_output.rs  load_network.rs  oidc_auth.rs  ottr_endpoint.rs  persistence.rs  query_builder_sparql.rs  rdf12_serialization.rs  rdf_upload_limit.rs  rml.rs  select_content_negotiation.rs  shacl.rs  sparql12_spec.rs  sparql_update_where.rs  ssrf_protection.rs  transactions.rs  upload.rs  void_endpoint.rs  vqs_productive_values.rs
sparql_endpoint/tests/common/: mod.rs
sparql_parser/: Cargo.toml
sparql_parser/src/: ast.rs  component_ordering.rs  execute.rs  join_ordering.rs  lib.rs
sparql_parser/tests/: base_iri_tests.rs  builtin_tests.rs  describe_from_tests.rs  filter_eq_numeric_normalization_tests.rs  graph_execution_tests.rs  join_ordering_tests.rs  limit_short_circuit.rs  minus_domain_disjointness_tests.rs  optional_minus_reorder_tests.rs  parser_tests.rs  partial_sub_tests.rs
src/: lib.rs  main.rs  main.rs.tmp.207044.dcad8c5210fd
tests/: api_integration.rs  cli_integration.rs  datalog_integration.rs  dblp_benchmark.rs  dblp_correctness.rs  jsonld_suite.rs  manchester_owl_reasoning.rs  network_policy.rs  owl_integration.rs  performance.rs  readme_examples.rs  real_world_ontologies.rs  rml_integration.rs  rml_json_integration.rs  rml_xml_integration.rs  semijoin_reorder.rs  shacl_suite.rs  sparql12_suite.rs  w3c_rdf12_conformance.rs  w3c_rdf_conformance.rs  w3c_sparql11_suite.rs
turtle/: Cargo.toml
turtle_parser/: Cargo.toml
(+349 files in other folders)
