[workspace]
members = ["ingress", "dag_rdf", "datalog", "owl_ontology", "eli", "owl2rl2datalog", "turtle_parser", "sparql_parser", "manchester_parser", "datalog_parser", "sparql_endpoint", "."]

[package]
name = "dagalog"
version = "0.1.0"
edition = "2024"

[dependencies]
ingress = { path = "ingress" }
dag-rdf = { path = "dag_rdf" }
owl-ontology = { path = "owl_ontology" }
owl2rl2datalog = { path = "owl2rl2datalog" }
turtle-parser = { path = "turtle_parser" }
log = "0.4"
