[workspace]
members = ["ingress", "dag_rdf", "datalog", "owl_ontology", "eli", "owl2rl2datalog", "turtle_parser", "sparql_parser", "manchester_parser", "datalog_parser", "sparql_endpoint", "rdf_owl_translator", "jsonld_parser", "."]

[package]
name = "dagalog"
version = "0.1.0"
edition = "2024"

[dependencies]
ingress = { path = "ingress" }
dag-rdf = { path = "dag_rdf" }
owl-ontology = { path = "owl_ontology" }
owl2rl2datalog = { path = "owl2rl2datalog" }
turtle-parser = { path = "turtle_parser" }
rdf-owl-translator = { path = "rdf_owl_translator" }
datalog = { path = "datalog" }
datalog-parser = { path = "datalog_parser" }
sparql-parser = { path = "sparql_parser" }
sparql-endpoint = { path = "sparql_endpoint" }
log = "0.4"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
env_logger = "0.10"
jsonld-parser = { path = "jsonld_parser" }
serde_json = "1"
