[package]
name = "dagalog-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dagalog-kernel"
path = "src/main.rs"

[dependencies]
ingress = { path = "../ingress" }
dag-rdf = { path = "../dag_rdf" }
datalog = { path = "../datalog" }
datalog-parser = { path = "../datalog_parser" }
sparql-parser = { path = "../sparql_parser" }
turtle = { path = "../turtle" }
rml = { path = "../rml" }
owl2rl2datalog = { path = "../owl2rl2datalog" }
rdf-owl-translator = { path = "../rdf_owl_translator" }

tokio = { version = "1", features = ["full"] }
zeromq = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
dirs = "5"
thiserror = "2"
log = "0.4"
