[package]
name = "rml"
version = "0.1.0"
edition = "2024"

[dependencies]
ingress = { path = "../ingress" }
dag-rdf = { path = "../dag_rdf" }
turtle = { path = "../turtle" }
thiserror = "2"
csv = "1"
serde_json = "1"
serde_json_path = "0.7"
sxd-document = "0.3"
sxd-xpath = "0.4"

[dev-dependencies]
serde_json = "1"
tempfile = "3"
