[package]
name = "sparql-endpoint"
version = "0.1.0"
edition = "2024"

[features]
browser-tests = ["dep:fantoccini"]

[dependencies]
dag-rdf = { path = "../dag_rdf" }
sparql-parser = { path = "../sparql_parser" }
turtle = { path = "../turtle" }
axum = "0.8"
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
urlencoding = "2"
fantoccini = { version = "0.22", optional = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
