[package]
name = "sparql-endpoint"
version = "0.1.0"
edition = "2024"

[dependencies]
dag-rdf = { path = "../dag_rdf" }
ingress = { path = "../ingress" }
shacl = { path = "../shacl" }
sparql-parser = { path = "../sparql_parser" }
turtle = { path = "../turtle" }
vqs-index = { path = "../vqs_index" }
jsonld-parser = { path = "../jsonld_parser" }
rml = { path = "../rml" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.52", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
urlencoding = "2"
subtle = "2"
jsonwebtoken = "9"
reqwest = { version = "0.13", features = ["json"] }
redb = "2"
tempfile = "3"

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "multipart"] }
urlencoding = "2"
thirtyfour = { version = "0.37", default-features = false, features = ["reqwest", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
wiremock = "0.6"
rsa = "0.9"
rand = "0.8"
base64 = "0.21"
tempfile = "3"
